# Graph-of-Thrones

./: .gitignore  BIP2026_prototype_.ipynb  README.md  got_project_final_final.ipynb  got_project_with_RAG_4_final_1.ipynb  oldREADME.md  prototype.ipynb  prototype_final.ipynb  pyproject.toml
data/: characters.json  characters_text.json  got_relationships.trig
scripts/: call_character_api.py  extract_relationship.py  got_project_final.ipynb  make_text_fom_api.py
src/: graphdb_client.py
