[project]
name = "graph-of-thrones"
version = "0.1.0"
description = "Conversational assistant combining RAG and a Game of Thrones Knowledge Graph"
requires-python = ">=3.14,<3.15"

dependencies = [
    "faiss-cpu",
    "jupyter",
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "langgraph",
    "numpy",
    "pandas",
    "rank-bm25",
    "rdflib",
    "requests",
    "sentence-transformers",
]